--- a/user-user-filt.ipynb
+++ b/user-user-filt.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -243,7 +243,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -396,7 +396,7 @@
        "4  0xtbPEna2Kei11vsU-U2Mw  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -644,7 +644,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -933,7 +933,7 @@
        "[5 rows x 227 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -1087,13 +1087,13 @@
     "def cosine_similarity(user):\n",
     "    for i in range(len(mat)):\n",
     "        cs = 1 - dist.cosine(mat[i],user)\n",
-    "        if cs >= 0.5:\n",
+    "        if cs > 0:\n",
     "            similar_users.append(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -1123,10 +1123,10 @@
     {
      "data": {
       "text/plain": [
-       "32"
+       "56"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,13 +1137,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'7hUp4XxmUCGqvPFAM8IJww'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "###Item Recommendation to users based on similar_users####"
+    "###Item Recommendation to users based on similar_users####\n",
+    "ind = similar_users[1]\n",
+    "recommend_items = []\n",
+    "\n",
+    "for k,v in enumerate(mat[ind]):\n",
+    "    if v>0:\n",
+    "        recommend_items.append(k)\n",
+    "\n",
+    "#Recommended item is\n",
+    "items[recommend_items[0]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommend_items[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>address</th>\n",
+       "      <th>attributes</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>city</th>\n",
+       "      <th>hours</th>\n",
+       "      <th>is_open</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>name</th>\n",
+       "      <th>neighborhood</th>\n",
+       "      <th>postal_code</th>\n",
+       "      <th>review_count</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15113</th>\n",
+       "      <td>300 Borough Dr, 215</td>\n",
+       "      <td>{'RestaurantsTableService': True, 'GoodForMeal...</td>\n",
+       "      <td>7hUp4XxmUCGqvPFAM8IJww</td>\n",
+       "      <td>[Restaurants, Canadian (New), Steakhouses, Ame...</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>{'Monday': '11:00-0:00', 'Tuesday': '11:00-0:0...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>43.776146</td>\n",
+       "      <td>-79.257638</td>\n",
+       "      <td>Moxie's Grill &amp; Bar</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>M1P 4P5</td>\n",
+       "      <td>65</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>ON</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   address                                         attributes  \\\n",
+       "15113  300 Borough Dr, 215  {'RestaurantsTableService': True, 'GoodForMeal...   \n",
+       "\n",
+       "                  business_id  \\\n",
+       "15113  7hUp4XxmUCGqvPFAM8IJww   \n",
+       "\n",
+       "                                              categories         city  \\\n",
+       "15113  [Restaurants, Canadian (New), Steakhouses, Ame...  Scarborough   \n",
+       "\n",
+       "                                                   hours  is_open   latitude  \\\n",
+       "15113  {'Monday': '11:00-0:00', 'Tuesday': '11:00-0:0...        1  43.776146   \n",
+       "\n",
+       "       longitude                 name neighborhood postal_code  review_count  \\\n",
+       "15113 -79.257638  Moxie's Grill & Bar  Scarborough     M1P 4P5            65   \n",
+       "\n",
+       "       stars state  \n",
+       "15113    2.5    ON  "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bus[df_bus['business_id'] == items[recommend_items[0]]]"
    ]
   },
   {
