Latest Item Recommendation

--- a/user-user-filt.ipynb
+++ b/user-user-filt.ipynb
@@ -1137,38 +1137,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'7hUp4XxmUCGqvPFAM8IJww'"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "###Item Recommendation to users based on similar_users####\n",
     "ind = similar_users[1]\n",
-    "recommend_items = []\n",
+    "recommend_items_indices = []\n",
     "\n",
-    "for k,v in enumerate(mat[ind]):\n",
-    "    if v>0:\n",
-    "        recommend_items.append(k)\n",
+    "for i in range(len(similar_users)):\n",
+    "    for k,v in enumerate(mat[similar_users[i]]):\n",
+    "        if v>0:\n",
+    "            recommend_items_indices.append(k)\n",
     "\n",
-    "#Recommended item is\n",
-    "items[recommend_items[0]]\n"
+    "##Removing indices which are already used by user\n",
+    "for k,v in enumerate(mat[3935]):\n",
+    "    if v > 0:\n",
+    "        recommend_items_indices.remove(k)\n",
+    "            \n",
+    "#Recommended items is\n",
+    "recommended_items = []\n",
+    "\n",
+    "for i in range(len(recommend_items_indices)):\n",
+    "    recommended_items.append(items[recommend_items_indices[i]])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -1176,21 +1174,22 @@
     {
      "data": {
       "text/plain": [
-       "29"
+       "61"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recommend_items[0]"
+    "## recommended_items - user_items\n",
+    "len(recommended_items)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -1222,48 +1221,51 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>15113</th>\n",
-       "      <td>300 Borough Dr, 215</td>\n",
-       "      <td>{'RestaurantsTableService': True, 'GoodForMeal...</td>\n",
-       "      <td>7hUp4XxmUCGqvPFAM8IJww</td>\n",
-       "      <td>[Restaurants, Canadian (New), Steakhouses, Ame...</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>{'Monday': '11:00-0:00', 'Tuesday': '11:00-0:0...</td>\n",
+       "      <th>42383</th>\n",
+       "      <td>The Linq Las Vegas, 3545 Las Vegas Blvd S, The...</td>\n",
+       "      <td>{'BusinessParking': {'garage': True, 'street':...</td>\n",
+       "      <td>JAmQCmczUclNUfZjkNdjQA</td>\n",
+       "      <td>[Active Life, Psychics &amp; Astrologers, Arts &amp; E...</td>\n",
+       "      <td>Las Vegas</td>\n",
+       "      <td>{'Monday': '11:30-2:00', 'Tuesday': '11:30-2:0...</td>\n",
        "      <td>1</td>\n",
-       "      <td>43.776146</td>\n",
-       "      <td>-79.257638</td>\n",
-       "      <td>Moxie's Grill &amp; Bar</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>M1P 4P5</td>\n",
-       "      <td>65</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>ON</td>\n",
+       "      <td>36.117461</td>\n",
+       "      <td>-115.16818</td>\n",
+       "      <td>High Roller</td>\n",
+       "      <td>The Strip</td>\n",
+       "      <td>89109</td>\n",
+       "      <td>1283</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NV</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   address                                         attributes  \\\n",
-       "15113  300 Borough Dr, 215  {'RestaurantsTableService': True, 'GoodForMeal...   \n",
+       "                                                 address  \\\n",
+       "42383  The Linq Las Vegas, 3545 Las Vegas Blvd S, The...   \n",
+       "\n",
+       "                                              attributes  \\\n",
+       "42383  {'BusinessParking': {'garage': True, 'street':...   \n",
        "\n",
        "                  business_id  \\\n",
-       "15113  7hUp4XxmUCGqvPFAM8IJww   \n",
+       "42383  JAmQCmczUclNUfZjkNdjQA   \n",
        "\n",
-       "                                              categories         city  \\\n",
-       "15113  [Restaurants, Canadian (New), Steakhouses, Ame...  Scarborough   \n",
+       "                                              categories       city  \\\n",
+       "42383  [Active Life, Psychics & Astrologers, Arts & E...  Las Vegas   \n",
        "\n",
        "                                                   hours  is_open   latitude  \\\n",
-       "15113  {'Monday': '11:00-0:00', 'Tuesday': '11:00-0:0...        1  43.776146   \n",
+       "42383  {'Monday': '11:30-2:00', 'Tuesday': '11:30-2:0...        1  36.117461   \n",
        "\n",
-       "       longitude                 name neighborhood postal_code  review_count  \\\n",
-       "15113 -79.257638  Moxie's Grill & Bar  Scarborough     M1P 4P5            65   \n",
+       "       longitude         name neighborhood postal_code  review_count  stars  \\\n",
+       "42383 -115.16818  High Roller    The Strip       89109          1283    4.0   \n",
        "\n",
-       "       stars state  \n",
-       "15113    2.5    ON  "
+       "      state  \n",
+       "42383    NV  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
