--- a/Draft_Report/project-report.tex
+++ b/Draft_Report/project-report.tex
@@ -64,18 +64,71 @@ This LaTex document was created Feb/Mar 2010 by Adriana Salerno and updated Feb 
 	\end{titlepage}
 	
 	\section{Introduction and Related Work}
-	
+	A recommender system or a recommendation system is a subclass of information filtering systems that seeks to predict the rating or preference that a user would give to an item \cite{rsw}. Recommendations systems have become very relevant today given the presence of e-commerce website like Amazon and Netflix as well as other platforms like Facebook and Youtube. These are utilized in a variety of areas such as movies, music, videos, news, books, research articles, search queries and products in case of Amazon. Two most common methods to build a recommendation system are collaborative filtering and content-based filtering. Collaborative filtering methods use user's past behaviors and behaviors of similar users to find items which a user might like. Content-based methods use the features of the items liked by the user to suggest similar items. There are also hybrid recommendation system which combine both of these techniques.
 	
 	\bigskip
 	
 	
 	\section{Dataset and Analysis} 
 		\subsection{Dataset}
-		 
-		
+		 The original dataset described in the Yelp Dataset Challenge 10 \cite{yelp} has 4.7M reviews and 1M tips by 1.1M users for 156K businesses spread across 12 cities. The 	data is given in json format which include business.json, review.json, user.json, checkin.json and tip.json.Each business has name, address, star rating and textual reviews. Each individual review data consists of anonymized IDs for the business, user and review, star rating, review type, review text and votes on how useful, funny or cool the review is.
+		\begin{figure}[h]
+				\centering
+				\includegraphics[scale=0.5]{data_details.png}
+				\caption{Dataset Details}
+		\end{figure}
 		\subsection{Analysis}
+		We did an initial analysis of the dataset. Below sections present our analysis.
+			\subsubsection{User data}
+			There are 1183362 total users whose reviews are present in the dataset. We plotted a histogram to understand the distribution of user reviews. Looking at the histogram, we can observe that most of the user have very few reviews and some top users have significant number of reviews. Majority of user have 25 or less reviews which is also shown by a mean of 23..72 and standard deviation of 80.5. The maximum number of reviews given by any user is 11656.
 		
-		
+			\begin{figure}[h]
+					\centering
+					\includegraphics[scale=0.5]{h_user_review.png}
+					\caption{Review count per user}
+			\end{figure}
+		  In addition to number of reviews, we also looked at distribution of star ratings given by a user. Looking at the histogram, we can observe that more users give higher rating which is shown by a median of 3.89 star rating. Mean and standard deviation for the same are 3.71 and 1.10 respectively. In order to group the reviews as positive, average and negative reviews, we have used the following method. We assume that if the rating lies in the range of (mean – standard deviation, mean) which is 2.6 to 3.7, we will categorize it as average. Reviews lower than 2.6 will be considered as a negative review and anything greater than 3.7 will be considered as positive reviews with two extremes being 0 and 1. 
+		 
+		  \begin{figure}[h]
+		  	\centering
+		  	\includegraphics[scale=0.7] {h_user_rating.png}
+		  	\caption{Rating per user}
+		  \end{figure}
+	     We also did some analysis to see the user growth on yelp. User growth has started declining after an increase in users joining from 2005 to 2014 .
+	     
+	      \begin{figure}[h]
+	     	\centering
+	     	\includegraphics[scale=0.5] {user_growth.png}
+	     	\caption{User Growth}
+	     \end{figure}
+     
+     	\subsubsection{Business Data}
+     	There are total 156639 business in the dataset. We grouped business according to city and business category to determine popular cities and categories. Below pie-charts give idea about popular cities and categories.
+     	
+     	\begin{figure}[h]
+     		\centering
+     		\includegraphics[scale=0.7] {top_cities.png}
+     		\caption{Top cities}
+     	\end{figure}
+	     \begin{figure}[h]
+	     	\centering
+	     	\includegraphics[scale=0.7] {top_categroies.png}
+	     	\caption{Top Business Categories}
+	     \end{figure}
+     We did more analysis into sub-categories of our most popular category i.e. resturants to map its distribution.
+      \begin{figure}[h]
+     	\centering
+     	\includegraphics[scale=0.5] {category_map.png}
+     	\caption{Resturant Sub-categories}
+     \end{figure}
+ 	\subsubsection{Checkin Data}
+ 	Finally, we did analysis on use checkin data to find out popular timing in the top cities shown in our earlier analysis.
+ 
+ 	\begin{figure}[h]
+ 		\centering
+ 		\includegraphics[scale=0.5] {checkin_times.png}
+ 		\caption{Resturant Sub-categories}
+ 	\end{figure}
 	\section{Methods}
 		
 		\subsection{Clustering Based Approach}
@@ -96,9 +149,10 @@ This LaTex document was created Feb/Mar 2010 by Adriana Salerno and updated Feb 
 		% NOTE: change the "9" above to "99" if you have MORE THAN 10 references.
 		
 	\bibitem{yelp} Yelp Dataset Challenge \url{https://www.yelp.com/dataset_challenge}
+	\bibitem{rsw} Recommendation System Wiki \url{https://en.wikipedia.org/wiki/Recommender_system}
 	\bibitem{cfilter}Collaborative filtering \url{https://en.wikipedia.org/wiki/Collaborative_filtering}
 	\bibitem{ydeep} Paul Covington, Jay Adams, Emre Sargin \textit{Deep Neural Networks for YouTube Recommendations}, ACM 2016.
-		
+	\bibitem{cdl} Hao Wang, Naiyan Wang, Dit-Yan Yeung\textit{Collaborative Deep Learning for Recommender Systems}, ACM 2015
 	\end{thebibliography}
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	
