--- a/Draft_Report/project-report.tex
+++ b/Draft_Report/project-report.tex
@@ -136,8 +136,9 @@ This LaTex document was created Feb/Mar 2010 by Adriana Salerno and updated Feb 
 		\subsection{Collaborative Filtering}
 		
 		\subsection{Collaborative Deep Learing}
+		We are using Colloborative Deep Learning \cite{cdl} (CDL) approach suggested by Hao Wang and others. We looked at various deep learning approaches towards building recommendation systems and we choose this work as this was generally applicable compared to other techniques which either target music or videos recommendations. CDL is a heirarchical Bayesian model. Stacked Denoising autencoders \cite{sdae} are used for feature learning and cleaning the noise from the input. In below sections, I will be brief about the input parameters and neural network arcitecture.
 		
-		
+		\subsubsection{Stacked Denoising Autoencoders}
 		
 	
 	\section{Experiments and Results}
@@ -153,6 +154,10 @@ This LaTex document was created Feb/Mar 2010 by Adriana Salerno and updated Feb 
 	\bibitem{cfilter}Collaborative filtering \url{https://en.wikipedia.org/wiki/Collaborative_filtering}
 	\bibitem{ydeep} Paul Covington, Jay Adams, Emre Sargin \textit{Deep Neural Networks for YouTube Recommendations}, ACM 2016.
 	\bibitem{cdl} Hao Wang, Naiyan Wang, Dit-Yan Yeung\textit{Collaborative Deep Learning for Recommender Systems}, ACM 2015
+	\bibitem{sdae} P. Vincent, H. Larochelle, I. Lajoie, Y. Bengio, and
+	P.-A. Manzagol. \textit{Stacked denoising autoencoders:
+		Learning useful representations in a deep network with
+		a local denoising criterion.} JMLR, 11:3371–3408, 2010
 	\end{thebibliography}
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	
