--- a/Draft_Report/project-report.tex
+++ b/Draft_Report/project-report.tex
@@ -135,6 +135,38 @@ This LaTex document was created Feb/Mar 2010 by Adriana Salerno and updated Feb 
 	\section{Methods}
 		
 		\subsection{Clustering Based Approach}
+		Clustering is based on the reviews of users. From the reviews we can build vector for each user and business with preference on different categories of businesses. By computing the distance of these two vectors, we can recommend businesses to user with the most similar preference vector value.
+		There are basically four steps:- 
+		\begin{enumerate}
+			\item  compose the preference vector of both users and businesses.
+			\item  clustering on user to generate a more general user preference vector
+			\item  calculating similarity of user preference and business preference
+			\item  Generating recommendations
+		\end{enumerate}
+		
+		\subsubsection{Vector Calculating}
+		Preference Vector is built on a common top 20 categories of a certain type of business such as 'Restaurant'. That's saying 20 kinds of restaurant like 'Spanish', 'Chinese', 'Mexican', 'Indian' and so on.
+		 \begin{figure}[h]
+			\centering
+			\includegraphics[scale=0.5] {vector1.png}
+			\caption{Top 20 Categories}
+		\end{figure}
+	
+		Based on users' each review, we can get the preference rating from 1 to 5 for a particular business, from which we can generate a rating value for each of the category in that particular business. For those categories user does not have review on, we assign a value of 1. Thus we get a vector of rating value on all top 20 categories for each user. The same procedure goes to business.
+		Vector comes with format '[1,2,3, ...]', with respect to a list of categories '[Indian, Chinese, Mexican, Spanish, ...]'.
+		 \begin{figure}[h]
+			\centering
+			\includegraphics[scale=0.5] {vector2.png}
+			\caption{Top 20 Categories}
+		\end{figure}
+		
+		\subsubsection{Clustering on Users}
+		Given the vector of each user, we can calculate the Euclidean distance of each pair of users. Then perform average agglomerative clustering on the users' distance matrix. Dendogram after performing clustering on 8000 users is as shown in figure. Based on the above dendogram we can decide on a cut-off point to get number of clusters. For the above dendogram we selected 10 clusters. 
+		 \begin{figure}[h]
+			\centering
+			\includegraphics[scale=0.5] {dendogram.png}
+			\caption{Dendogram after Clustering}
+		\end{figure}
 		
 		\subsection{Collaborative Filtering}
 		Collaborative Filtering is the method to implement recommendation system. It is the way to recommend item to user 'u1' by collaborating the choice of item of other users similar to user 'u1'. We create a n X m matrix, where n is the number of users and m is the number of business, with each cell representing the rating given by a user to that particular business. Each row in matrix represent the vector of star rating given by user for all the businesses. \\
@@ -179,7 +211,23 @@ This LaTex document was created Feb/Mar 2010 by Adriana Salerno and updated Feb 
 			\caption{NN representation for degenerated CDL}
 		\end{figure}
 	\section{Experiments and Results}
+	\subsection{Clustering Based Approach}
+	\subsubsection{Calculating Similarity and Generating Recommendations}
+	Based on users clustering dendogram shown in figure, we generate an average vector representing user preference vector. Then we Do an inner product of user vector and business vector. Smaller the value, more similar the user and the business. From the results, we choose top 10 or 20 business with the minimum value as the recommendations. Below is a sample for user with user is: 'McLqvYLBQoCFQikU9dC4cQ' searching for “Restaurants”.
+
+	\begin{figure}[h]
+		\centering
+		\includegraphics[scale=0.7]{results_cl.png}
+		\caption{Results for User with id 'McLqvYLBQoCFQikU9dC4cQ'}
+	\end{figure}
 	
+	\subsubsection{Evaluation of the clustering}
+	We used cophenetic correlation to evaluate the quality of the clustering. 
+	\begin{figure}[h]
+		\centering
+		\includegraphics[scale=0.7]{eval_cl.png}
+		\caption{Cophenetic Correlation Distance for Different User Groupings}
+	\end{figure}
 	\subsection{User-User Collaborative Filtering}
 
 	For the initial setup, we have worked on 100,000 rows of reviews.json file. We have created a matrix of 78276 users and 4224 businesses.We randomly choose one user to find the set of similar users of count 200. Based on positive average star ratings given by 200 users, 531 set of businesses are recommended to users.
